[INJIWEB-1563] update adr - Usage of UI management library in code
Signed-off-by: KiruthikaJeyashankar <kiruthikavjshankar@gmail.com>

--- a/docs/adr/0.0.1-injiweb-refactoring.md
+++ b/docs/adr/0.0.1-injiweb-refactoring.md
@@ -73,11 +73,22 @@ Reviewers / team:  Vijayakumar S , challa,  Shiva Kumar, Sasikumar Ganesan
 ## 4.1 Usage of UI management library in code
 
 ### Context :
-Since we are using TailwindCSS, we are using the classes directly in the code, which is not a good practice, as it makes the code more complex and hard to read.
+Usage of tailwind classes inline in the components makes the code hard to read and maintain.
+
+##### Why is this an issue?
+1. Readability: Usage of TailwindCSS classes inline in the components makes JSX component long thus resulting in less readability.
+2. Reusability & Maintainability: Since the classnames are maintained within the component, its not possible to use same styles in different component.
+   - If we want to change the styles, we have to change it in multiple places which can lead to
+      - increased effort for change
+     - inconsistencies in the styles across the application.
+3. Scalability: As the application grows, it becomes harder to manage the styles, leading to a messy codebase.
 
 ### Decision :
 We will be using the TailwindCSS classes in a separate file, and use the class names in the code, so that it is easy to read and maintain.
-For example, If we are writing styles for a Page - HomePage, the folder structure will be like this
+
+##### Example, 
+
+If we are writing styles for a Page - HomePage, the folder structure will be like this
 
 ```
 src
@@ -86,6 +97,33 @@ src
 │   │   ├── HomePage.tsx // Home Page Component
 │   │   └── HomePageStyles.ts // Home Page Styles
 ```
+
+The code will be as follows:
+
+Styles file managing the styles - HomePageStyles.ts
+```tsx
+export const HomePageStyles = {
+  container: 'flex flex-col items-center justify-center min-h-screen bg-gray-100',
+  title: 'text-4xl font-bold text-blue-600 mb-4',
+};
+```
+
+Component file consuming the styles - HomePage.tsx
+```tsx
+import React from 'react';
+import { HomePageStyles } from './HomePageStyles';
+
+const HomePage: React.FC = () => {
+  return (
+    <div className={HomePageStyles.container}>
+      <h1 className={HomePageStyles.title}>Welcome to the Home Page</h1>
+      {/* Other components */}
+    </div>
+  );
+};
+export default HomePage;
+```
+
 
 ### People involved :
 Owners: KiruthikaJeyashankar
