[INJIWEB-1519] fix error not shown in auth page - upload QR flow
Signed-off-by: KiruthikaJeyashankar <kiruthikavjshankar@gmail.com>

--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -197,12 +197,12 @@
   "AuthorizationPage": {
     "error": {
       "code": {
-        "invalidRedirectUri": "ಪ್ರವೇಶವನ್ನು ನಿರಾಕರಿಸಲಾಗಿದೆ!",
-        "invalidClient": "ಪ್ರವೇಶವನ್ನು ನಿರಾಕರಿಸಲಾಗಿದೆ!"
+        "invalid_redirect_uri": "ಪ್ರವೇಶವನ್ನು ನಿರಾಕರಿಸಲಾಗಿದೆ!",
+        "invalid_client": "ಪ್ರವೇಶವನ್ನು ನಿರಾಕರಿಸಲಾಗಿದೆ!"
       },
       "message": {
-        "invalidRedirectUri": "ರುಜುವಾತುಗಳನ್ನು ಹಂಚಿಕೊಳ್ಳಲು ಸಾಧ್ಯವಿಲ್ಲ ಏಕೆಂದರೆ ಅವುಗಳನ್ನು ವಿನಂತಿಸಿದವರನ್ನು ಗುರುತಿಸಲು ನಮಗೆ ಸಾಧ್ಯವಾಗಲಿಲ್ಲ. ",
-        "invalidClient": "ರುಜುವಾತುಗಳನ್ನು ಹಂಚಿಕೊಳ್ಳಲು ಸಾಧ್ಯವಿಲ್ಲ ಏಕೆಂದರೆ ಅವುಗಳನ್ನು ವಿನಂತಿಸಿದವರನ್ನು ಗುರುತಿಸಲು ನಮಗೆ ಸಾಧ್ಯವಾಗಲಿಲ್ಲ. "
+        "invalid_redirect_uri": "ರುಜುವಾತುಗಳನ್ನು ಹಂಚಿಕೊಳ್ಳಲು ಸಾಧ್ಯವಿಲ್ಲ ಏಕೆಂದರೆ ಅವುಗಳನ್ನು ವಿನಂತಿಸಿದವರನ್ನು ಗುರುತಿಸಲು ನಮಗೆ ಸಾಧ್ಯವಾಗಲಿಲ್ಲ. ",
+        "invalid_client": "ರುಜುವಾತುಗಳನ್ನು ಹಂಚಿಕೊಳ್ಳಲು ಸಾಧ್ಯವಿಲ್ಲ ಏಕೆಂದರೆ ಅವುಗಳನ್ನು ವಿನಂತಿಸಿದವರನ್ನು ಗುರುತಿಸಲು ನಮಗೆ ಸಾಧ್ಯವಾಗಲಿಲ್ಲ. "
       }
     }
   },
