[INJIWEB-1557] show subheader in the download loading modal also and add the translations for the same in all languages
Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -152,7 +152,8 @@
         "subHeader": "تعذر تنزيل البطاقة. يُرجى النقر على زر \"الصفحة الرئيسية\" لبدء العملية."
       },
       "loading": {
-        "header": "تنزيل بيانات الاعتماد"
+        "header": "تنزيل بيانات الاعتماد",
+        "subHeader": "سيستمر تنزيل بطاقتك حتى عند تحديثها أو تبديل الشاشات. يمكنك تنزيل بطاقة واحدة في كل مرة. ستظهر في \"البطاقات المخزنة\" عند الانتهاء."
       }
     }
   },
