--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -152,7 +152,8 @@
         "subHeader": "कार्ड डाउनलोड करने में असमर्थ। प्रक्रिया शुरू करने के लिए कृपया \"होम पर जाएँ\" बटन पर क्लिक करें।"
       },
       "loading": {
-        "header": "क्रेडेंशियल डाउनलोड करना"
+        "header": "क्रेडेंशियल डाउनलोड करना",
+        "subHeader": "आपका कार्ड तब भी डाउनलोड होता रहेगा जब आप स्क्रीन को रिफ्रेश या स्विच करेंगे। आप एक बार में एक कार्ड डाउनलोड कर सकते हैं। पूरा हो जाने पर यह स्टोर किए गए कार्ड में दिखाई देगा।"
       }
     }
   },
