--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -152,7 +152,8 @@
         "subHeader": "கார்டைப் பதிவிறக்க முடியவில்லை. செயல்முறையைத் தொடங்க \"முகப்புக்குச் செல்\" பொத்தானைக் கிளிக் செய்யவும்."
       },
       "loading": {
-        "header": "நற்சான்றிதழைப் பதிவிறக்குகிறது"
+        "header": "நற்சான்றிதழைப் பதிவிறக்குகிறது",
+        "subHeader": "நீங்கள் திரைகளைப் புதுப்பித்தாலும் அல்லது மாற்றினாலும் உங்கள் கார்டு தொடர்ந்து பதிவிறக்கம் செய்யப்படும். நீங்கள் ஒரு நேரத்தில் ஒரு கார்டைப் பதிவிறக்கலாம். முடிந்ததும் அது சேமிக்கப்பட்ட அட்டைகளில் தோன்றும்."
       }
     }
   },
