--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -152,7 +152,8 @@
         "subHeader": "ಕಾರ್ಡ್ ಡೌನ್‌ಲೋಡ್ ಮಾಡಲು ಸಾಧ್ಯವಾಗುತ್ತಿಲ್ಲ. ಪ್ರಕ್ರಿಯೆಯನ್ನು ಪ್ರಾರಂಭಿಸಲು ದಯವಿಟ್ಟು \"ಮುಖಪುಟಕ್ಕೆ ಹೋಗು\" ಬಟನ್ ಕ್ಲಿಕ್ ಮಾಡಿ."
       },
       "loading": {
-        "header": "ರುಜುವಾತುಗಳನ್ನು ಡೌನ್‌ಲೋಡ್ ಮಾಡಲಾಗುತ್ತಿದೆ"
+        "header": "ರುಜುವಾತುಗಳನ್ನು ಡೌನ್‌ಲೋಡ್ ಮಾಡಲಾಗುತ್ತಿದೆ",
+        "subHeader": "ನೀವು ಪರದೆಗಳನ್ನು ರಿಫ್ರೆಶ್ ಮಾಡಿದರೂ ಅಥವಾ ಬದಲಾಯಿಸಿದರೂ ಸಹ ನಿಮ್ಮ ಕಾರ್ಡ್ ಡೌನ್‌ಲೋಡ್ ಆಗುತ್ತಲೇ ಇರುತ್ತದೆ. ನೀವು ಒಂದು ಸಮಯದಲ್ಲಿ ಒಂದು ಕಾರ್ಡ್ ಅನ್ನು ಡೌನ್‌ಲೋಡ್ ಮಾಡಬಹುದು. ಪೂರ್ಣಗೊಂಡಾಗ ಅದು ಸಂಗ್ರಹಿಸಲಾದ ಕಾರ್ಡ್‌ಗಳಲ್ಲಿ ಗೋಚರಿಸುತ್ತದೆ."
       }
     }
   },
